# xen-api

./: .clang-format  .codechecker.json  .codecov.yml  .coverage.excludes  .coverage.sh  .coveralls.sh  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .hg_archival.txt  .hgignore  .merlin  .mypy.ini  .ocamlformat  .ocamlformat-ignore  .ocamlinit  .pre-commit-config.yaml  .pylintrc  .pylintrc.project-dict.txt  .ref_replacement  .sourcery.yaml  .travis-ci.sh  .travis-opam-coverage.sh  .travis-post-install.sh  .travis-python-nosetests.sh  .travis-xenserver-build-env.sh  .travis-xs-opam.sh  .travis.oasis  .travis.yml  .typerex  .update_api.py  CHANGELOG  CHANGELOG.md  CHANGES  CHANGES.md  CLAUDE.md  (+367 more)
.duniverse/: dune.sxp  opam.sxp
.github/: CODEOWNERS  python-nosetests-3.sh  python-nosetests.sh  python-pytest-3.sh  python-pytest.sh
.swm/: _index.aj9cllu1.sw.md  _index.yutm3747.sw.md  aggregated-local-storage-and-host-reboots.qejila93.sw.md  backtrace-support.r89uwecs.sw.md  bonding-improvements-design.dk583i05.sw.md  code-coverage-profiling.18r9qfvv.sw.md  cpu-feature-levelling-20.ek3375zb.sw.md  default.d54rr5c8.sw.md  distributed-database.3y5uxpm2.sw.md  emergency-network-reset-design.as99rmtq.sw.md  fcoe-capable-nics.fzv4n2oz.sw.md  gpu-pass-through-support.w8couh15.sw.md  gpu-support-evolution.tu4g3w96.sw.md  gro-and-other-properties-of-pifs.9b0xciaa.sw.md  heterogeneous-pools.w00s4kbf.sw.md  improving-snapshot-revert-behaviour.wntx60r3.sw.md  index.cj2ebjrc.sw.md  index.ikb4yd7j.sw.md  index.ysdkjhtf.sw.md  integrated-gpu-passthrough-support.d2pwnogt.sw.md  local-database.w2lkpzsi.sw.md  management-interface-on-vlan.ximmt3wm.sw.md  multiple-cluster-managers.83ssayr3.sw.md  multiple-device-emulators.fgqhs119.sw.md  ocfs2-storage.9ec5kiux.sw.md  overview-of-the-memory-squeezer.gsvbaram.sw.md  patches-in-vdis.dq21fti9.sw.md  pci-passthrough-support.t7lhsa8y.sw.md  pool-wide-ssh.3yka93rg.sw.md  process-events-from-xenopsd-in-a-timely-manner.4vucv229.sw.md  python.49e5375n.sw.md  rdp-control.jfkwwlu3.sw.md  rrdd-archival-redesign.e23kx7q4.sw.md  rrdd-plugin-protocol-v2.ei2dceg9.sw.md  rrdd-plugin-protocol-v3.46ywk7eo.sw.md  schedule-snapshot-design.li59dudj.sw.md  smapiv3.mzw5xc5p.sw.md  specifying-emulated-pci-devices.qexq4ky6.sw.md  sr-level-rrds.3l06zp35.sw.md  swimm.json  (+7 more)
apis/: udhcp.md
ast/: ast.ml  docstrings.ml  gen-compiler_specifics  jbuild  parse.ml  parse.mli  syntaxerr.ml  warn.ml  warn.mli
async/: dune  jbuild  protocol_async.ml  protocol_async.mli  xen-api-client-async.mldylib  xen_api_async_unix.ml  xen_api_async_unix.mli
async_examples/: event_test.ml  jbuild  list_vms.ml
async_test/: list_vms.ml
bench/: bench.ml  jbuild  tco.ml
bench-bin/: hashtbl_bench.ml
benchmarks/: .merlin  jbuild
broker/: Makefile  README.md  TODO.md  _oasis  _tags  client.ml  myocamlbuild.ml  protocol.ml  protocol.mli  server.ml  setup.ml  store.ml  switch.ml  xs_transport_unix.ml
bugtool-plugin/: rrdd-plugins.xml
c/: Makefile.dist  OMakefile  README.dist  compat.patch  dune  gen_c_binding.ml  helper.ml  jbuild  xen_common.c  xen_common.h  xen_int_set.c  xen_internal.h  xen_string_set.h
c_stubs/: dune  jbuild  statdev.ml  statdev_stubs.c  xenctrlext_stubs.c
camldm/: META.in  Makefile  camldm.ml  camldm.mli  camldm_stubs.c  testcamldm.ml
cdrom/: META  META.in  Makefile  cdrom.ml  cdrom.mli  cdrom.mllib  cdrom_stubs.c  libcdrom_stubs.clib
cli/: cli.ml  client.ml  common.ml  dune  fe_cli.ml  get_vhd_vsize.ml  jbuild  main.ml  network_cli.ml  query.ml  sparse_dd.ml  wsproxy.ml  xn.ml  xn_cfg_types.ml  xs.1
client_lwt/: xs_client_lwt.mli
client_unix/: jbuild  xs_client_unix.ml
close-and-exec/: META.in  Makefile  closeandexec.ml  closeandexec.mli  closeandexec_main.ml
cluster/: cluster_cli.ml  cluster_client.ml  cluster_interface.ml  dune  jbuild
collector/: expect_test_collector.ml  jbuild
common/: CommonFunctions.ml  dune  jbuild  licence.ml
compression/: compression.ml  compression.mli  jbuild
config/: discover.ml  expect_test_config.mli  jbuild
core/: META  core.odocl  dune  jbuild  make.ml  make.mli  measurable.ml  message_switch.py  message_switch_async.mldylib  message_switch_unix.mllib  monad.mli  mresult.ml  mresult.mli  protocol.ml  protocol.mli  protocol_async.ml  protocol_async.mli  protocol_lwt.ml  protocol_lwt.mli  protocol_unix.ml  protocol_unix.mli  protocol_unix_scheduler.ml  s.ml  s.mli  scheduler.ml  xenstore.odocl  xenswitch_lwt.mllib  xs_handle.mli  xs_protocol.ml
core_test/: basic-rpc-test.sh  client_async_main.ml  client_main.ml  client_unix_main.ml  dune  interop-test.sh  jbuild  link_test_main.ml  message_switch_test.py  server_async_main.ml  server_main.ml  server_unix_main.ml
cpuid/: META  META.in  Makefile  cpuid.ml  cpuid.mldylib  cpuid.mli  cpuid_stubs.c  libcpuid_stubs.clib
csharp/: FriendlyErrorNames.resx  OMakefile  README-bin.txt.dist  README-common.txt.dist  README-samples.txt.dist  README-src.txt.dist  README.dist  XenServer.NET.snk  dune  friendly_error_names.ml  gen_csharp_binding.ml  jbuild  subst-autogen-csproj.sh
dbgring/: dbgring.ml  dune  jbuild
debian/: README.Debian  changelog  control  copyright  gbp.conf  libxenapi-ocaml-dev.install  libxenapi-ocaml-dev.install.in  rules  watch  xcp-networkd.config  xcp-networkd.dirs  xcp-networkd.init  xcp-networkd.install  xcp-networkd.postinst  xcp-networkd.postrm  xcp-networkd.templates  xcp-squeezed.init  xcp-squeezed.install  xcp-squeezed.manpages  xcp-v6d.init  xcp-v6d.install  xcp-v6d.manpages  xcp-xapi-debug.install  xcp-xapi.init  xcp-xapi.install  xcp-xapi.manpages  xcp-xe.install  xcp-xe.manpages  xen-api.substvars
deprecated/: jbuild
designs/: interprocesscomms.md
dgraph/: dGraphModel.ml  dGraphTreeLayout.ml  dGraphTreeModel.ml  xDot.mli
disk/: disk.ml  jbuild
doc/: CHANGES  Makefile  README.md  RELEASING.md  advanced.md  api.odocl  concepts.html.body  doc.py  faq.html.body  features.html.body  features.md  footer.html  globals.tex  go.mod  header.html  hugo.toml  learn.html  (+3 more)
(+21256 files in other folders)
